gap fix

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,6 +1,7 @@
 .videos__container {
   display: flex;
   flex-wrap: wrap;
+  gap: 10px;
 }
 
 .descricao-video {
@@ -113,7 +114,7 @@
   }
 }
 
-@media(min-width: 1024px) {
+@media(min-width: 1440px) {
   .menu__container {
     width: 239px;
     overflow: scroll;
